@@ -59,6 +59,7 @@
     <title>Setting Environment Variables</title>
     <related>
       <modulelist>
+        <module>mod_cache</module>
         <module>mod_env</module>
         <module>mod_rewrite</module>
         <module>mod_setenvif</module>
