@@ -226,6 +226,39 @@
 
 </section>
 
+<section id="status"><title>Cache Status and Logging</title>
+  <p>Once <module>mod_cache</module> has made a decision as to whether or not
+  an entity is to be served from cache, the detailed reason for the decision
+  is written to the subprocess environment within the request under the
+  <strong>cache-status</strong> key. This reason can be logged by the
+  <directive module="mod_log_config">LogFormat</directive> directive as
+  follows:</p>
+
+  <example>
+    LogFormat "%{cache-status}e ..."
+  </example>
+
+  <p>Based on the caching decision made, the reason is also written to the
+  subprocess environment under one the following three keys, as appropriate:</p>
+
+  <dl>
+    <dt>cache-hit</dt><dd>The response was served from cache.</dd>
+    <dt>cache-revalidate</dt><dd>The response was stale and was successfully
+      revalidated, then served from cache.</dd>
+    <dt>cache-miss</dt><dd>The response was served from the upstream server.</dd>
+  </dl>
+
+  <p>This makes it possible to support conditional logging of cached requests
+  as per the following example:</p>
+
+  <example>
+    CustomLog cached-requests.log common env=cache-hit<br />
+    CustomLog uncached-requests.log common env=cache-miss<br />
+    CustomLog revalidated-requests.log common env=cache-revalidate<br />
+  </example>
+
+</section>
+    
 <directivesynopsis>
 <name>CacheEnable</name>
 <description>Enable caching of specified URLs using a specified storage
@@ -777,5 +810,87 @@ LastModified date.</description>
 
   </usage>
 </directivesynopsis>
+
+<directivesynopsis>
+<name>CacheHeader</name>
+<description>Add an X-Cache header to the response.</description>
+<syntax>CacheHeader <var>on|off</var></syntax>
+<default>CacheHeader off</default>
+<contextlist><context>server config</context>
+    <context>virtual host</context>
+    <context>directory</context>
+    <context>.htaccess</context>
+</contextlist>
+<compatibility>Available in Apache 2.3.9 and later</compatibility>
   
+<usage>
+  <p>When the <directive module="mod_cache">CacheHeader</directive> directive
+  is switched on, an <strong>X-Cache</strong> header will be added to the response
+  with the cache status of this response. If the normal handler is used, this
+  directive may appear within a <directive module="core">&lt;Directory&gt;</directive>
+  or <directive module="core">&lt;Location&gt;</directive> directive. If the quick
+  handler is used, this directive must appear within a server or virtual host
+  context, otherwise the setting will be ignored.</p>
+
+  <dl>
+    <dt><strong>HIT</strong></dt><dd>The entity was fresh, and was served from
+    cache.</dd>
+    <dt><strong>REVALIDATE</strong></dt><dd>The entity was stale, was successfully
+    revalidated and was served from cache.</dd>
+    <dt><strong>MISS</strong></dt><dd>The entity was fetched from the upstream
+      server and was not served from cache.</dd>
+  </dl>
+
+  <example>
+    # Enable the X-Cache header<br />
+    CacheHeader on<br />
+  </example>
+
+  <example>
+    X-Cache: HIT from localhost<br />
+  </example>
+
+</usage>
+</directivesynopsis>
+
+<directivesynopsis>
+<name>CacheDetailHeader</name>
+<description>Add an X-Cache-Detail header to the response.</description>
+<syntax>CacheDetailHeader <var>on|off</var></syntax>
+<default>CacheDetailHeader off</default>
+<contextlist><context>server config</context>
+      <context>virtual host</context>
+      <context>directory</context>
+      <context>.htaccess</context>
+</contextlist>
+<compatibility>Available in Apache 2.3.9 and later</compatibility>
+    
+<usage>
+  <p>When the <directive module="mod_cache">CacheDetailHeader</directive> directive
+  is switched on, an <strong>X-Cache-Detail</strong> header will be added to the response
+  containing the detailed reason for a particular caching decision.</p>
+  
+  <p>It can be useful during development of cached RESTful services to have additional
+  information about the caching decision written to the response headers, so as to
+  confirm whether <code>Cache-Control</code> and other headers have been correctly
+  used by the service and client.</p>
+  
+  <p>If the normal handler is used, this directive may appear within a
+  <directive module="core">&lt;Directory&gt;</directive> or
+  <directive module="core">&lt;Location&gt;</directive> directive. If the quick handler
+  is used, this directive must appear within a server or virtual host context, otherwise
+  the setting will be ignored.</p>
+
+  <example>
+    # Enable the X-Cache-Detail header<br />
+    CacheDetailHeader on<br />
+  </example>
+
+  <example>
+    X-Cache-Detail: "conditional cache hit: entity refreshed" from localhost<br />
+  </example>
+
+</usage>
+</directivesynopsis>
+
 </modulesynopsis>
